# Sockets

./: CMakeLists.txt  Main.cpp  vcpkg.json
Includes/: ClientInterface.hpp  CommonIncludes.h  Connection.hpp  Message.hpp  ServerInterface.hpp  ThreadSafeQueue.hpp
NetClient/: CMakeLists.txt  Client.cpp
NetCommon/: client.h  common.h  connection.h  includes.h  message.h  server.h  threadsafequeue.h
Tests/: CMakeLists.txt  Main.cpp
